Try to setup Android port using Gluon/GraalVM
Il y a de nombreux problèmes de compilation à résoudre. Aucun code n'a été adapté pour Android, mais il faudrait déjà réussir à le compiler...